tcas2 and others

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+	 <p class="big">
+   <li> May 2022, Invited to served as TPC member of <A
+                                                          HREF="http://conf.ccf.org.cn/chip2022">CCF
+                                                          Chip Conference 22</a>.</li>
    <li> Oct. 2021, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
@@ -88,6 +92,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="about">About me</a> </h2>
 
 <UL>
+	 <p class="big">
     <strong>Zhufei Chu</strong>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
     He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
     He is currently an associate professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
@@ -103,11 +108,15 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
   <h3> 2022 </h3>
+   <p class="big">
+  <li> Chenghao Yang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei
+      Chu</a>, and Xiaojing Zha "<A HREF="https://ieeexplore.ieee.org/abstract/document/9759467/">Logic Synthesis Optimization Sequence tuning using RL-based LSTM and Graph Isomorphism Network</a>",
+  <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022, Accepted for publication.</li>
+  
   <li> Peng Liu, Jianguo Ni, and <A HREF="https://zfchu.github.io/">Zhufei
-      Chu</a>, "Wire-crossings Optimization
+      Chu</a>, "<A HREF="https://link.springer.com/article/10.1007/s10773-022-05000-5">Wire-crossings Optimization
     Based on Majority-of-five and XOR-of-three Primitives in QCA </a>",
-  <i>International Journal of Theoretical Physics</i>, Accepted for
-  publication.</li>
+  <i>International Journal of Theoretical Physics</i>, Mar. 2022, 61(3): 1-22.</li>
 
   <li>Xiang He and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
     "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926021001243">Stochastic Circuit Synthesis via Satisfiability</a>", <i> Integration, the
@@ -124,8 +133,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 2022, Hangzhou, China. </li>
 
 <h3> 2021 </h3>
+ <p class="big">
 <li>
-    储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021，录用待发表. (<strong>Invited</strong>)
+    储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021, 3(2):64-73. (<strong>Invited</strong>)
 </li>
   <li> 
     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei
@@ -170,6 +180,7 @@ June 2021, 68(6):1942-1946.
 2021, Shanghai, China. </li>
 
   <h3> 2020 </h3>
+   <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
   Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
     HREF="https://ieeexplore.ieee.org/document/8747480">Advanced Functional Decomposition Using Majority and Its
@@ -203,6 +214,7 @@ Memristive Circuit</a>", <strong>CSTIC' 20</strong>, <i> China Semiconductor Tec
     (Ti-TcFET)</a>". Micromachines. Jan. 2020, 11(1):64. </li>
 
 <h3> 2019 </h3>
+ <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi,
   Lunyao Wang, and Yinshui Xia, "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926019301932"> Multi-Objective Algebraic
        Rewriting in XOR-Majority Graphs</a>", <i> Integration, the
@@ -239,6 +251,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 </li>
 
 <h3> 2018 </h3>
+ <p class="big">
 <li>Qi Yu, Lunyao Wang, <A HREF="https://zfchu.github.io/">Zhufei
     Chu</a>, and Yinshui Xia , "<A
     HREF="https://ieeexplore.ieee.org/abstract/document/8565775">
@@ -265,6 +278,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
     Conference</i>, Jan 2018, Jeju Island, Korea.
 </li>
 <h3> 2017 </h3>
+ <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and  Giovanni De Micheli, "<A
     HREF="http://www.iwls.org/iwls2017/program.php">Functional Decomposition
@@ -285,12 +299,14 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 </li>
 
 <h3> 2016 </h3>
+ <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "<a href="http://onlinelibrary.wiley.com/doi/10.1002/cta.2178/full"> Efficient power pad assignment for multi-voltage SoC and its application in floorplanning</a>", <i>International Journal of Circuit Theory and Applications</i>, 44(8): 1533–1550, 2016.</li>
 	
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, "<a href="http://www.sciencedirect.com/science/article/pii/S0167926015001170"> Multi-supply voltage (MSV) driven SoC floorplanning for fast design convergence </a>", <i>Integration, the VLSI Journal</i>, 52:335-346, Jan 2016.</li>
 
 
 <h3> 2014 </h3>
+ <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "<a href="http://www.sciencedirect.com/science/article/pii/S002626921400007X">Efficient nonrectangular shaped voltage island aware floorplanning with nonrandomized searching engine</a>", <i>Microelectronics Journal</i>, 45(4):382-393, Apr. 2014. </li>
 
 <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang, and Jun Zhai "Wire-bonding Power Pad Assignment and Power Mesh Topological Optimization for Multiple Voltage SoC", <i> Journal of Computer-Aided Design and Computer graphics</i>, 26(9):1501-1508, Sep 2014. </li>
@@ -300,7 +316,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 
 
 <h3> Before 2014 </h3>
-
+ <p class="big">
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia，William N. N. Hung, Xiaoyu Song and Lunyao Wang, “<a href="http://www.tandfonline.com/doi/abs/10.1080/00207217.2012.720945"> Timing-driven logic restructuring for nano-hybrid circuits </a>”, International Journal of Electronics, 100(5):669-685, May 2013.</li>
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, “<a href="https://link.springer.com/article/10.1007/s11390-012-1210-7">Cell mapping for nanohybrid circuit architecture using genetic algorithm</a>”，Journal of Computer Science and Technology, 27(1):113-120, Jan. 2012. </li>
@@ -325,6 +341,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 
 <h2><a name="services">Professional Services</a></h2>
 <ul> 
+  <p class="big">
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
@@ -357,7 +374,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 <table border=0 cellspacing=5>
 <td width=500>
 <h2><a name="address">Address</a></h2>	
-Fenghua Road 818, Jiangbei, Ningbo, 315211<br>
+Yuxiu Road 505, Zhenhai, Ningbo, 315211<br>
 Faculty of Electrical Engineering and Computer Science (EECS)<br>
 Ningbo Univeristy, Zhejiang, China
 </td>
@@ -367,8 +384,8 @@ Ningbo Univeristy, Zhejiang, China
 </td>
 
 <td>
-	<td width = 300>
-		<img src="images/cise.jpg" width=280>
+	<td width = 350>
+		<img src="images/yangym.jpg" width=320>
 </td>
 
 
