--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
-   <li> May 2022, Invited to served as TPC member of <A
+   <li> May 2022, Invited to served as sub-forum co-chair and TPC member of <A
                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
-                                                          Chip Conference 22</a>.</li>
+                                                          Chip'22</a>.</li>
    <li> Oct. 2021, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
@@ -109,6 +109,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2022 </h3>
    <p class="big">
+<li>
+    储著飞，潘鸿洋，"基于布尔可满足性的精确逻辑综合综述"，<i>电子与信息学报</i>，2022,
+    录用待发表. (<strong>Invited</strong>)
+</li>
   <li> Chenghao Yang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, and Xiaojing Zha "<A HREF="https://ieeexplore.ieee.org/abstract/document/9759467/">Logic Synthesis Optimization Sequence tuning using RL-based LSTM and Graph Isomorphism Network</a>",
   <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022, Accepted for publication.</li>
