--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <table border=0 cellspacing=5>
 <td width=143>
-<img src="images/chu.jpg" width=120>
+<img src="images/chu_2022.jpg" width=120>
 </td>
 <td width=600>
 <h2>Zhufei Chu, Associate Professor, Ningbo Univ.</h2>
@@ -368,6 +368,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal IET Quantum Communication. </li>
   <li>Reviewer for the journal IET Computers & Digital Techniques. </li>
   <li>Reviewer for the journal Optik, International Journal for Light and Electron Optics. </li>
+  <li>Reviewer for the journal Journal of Combinatorial Optimization. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
