url links and multiple fixes

--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   <h3> 2022 </h3>
    <p class="big">
    <li>
-Zhufei Chu, Chuanhe Shang, Tingting Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, Efficient Design of Majority Logic based Approximate Arithmetic Circuits, IEEE Transactions on Very Large Scale Integration Systems, 2022, Accepted for publication.
+<A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Chuanhe Shang, Tingting Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "Efficient Design of Majority Logic based Approximate Arithmetic Circuits", IEEE Transactions on Very Large Scale Integration Systems, 2022, Accepted for publication.
      </li>
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, Accepted for publication. (<strong>Invited</strong>)
 	   </li>
 <li>
-    储著飞，潘鸿洋，"基于布尔可满足性的精确逻辑综合综述"，<i>电子与信息学报</i>，2022,
+    <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A HREF="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CAPJ&dbname=CAPJLAST&filename=DZYX20220902000&uniplatform=NZKPT&v=OBbwn4s_s_B6KENbBUVl4cVWgp9cD3P3jSYyHbdEAGtk1hcGDcP7Ol5V6pf8Iajz">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2022,
     录用待发表. (<strong>Invited</strong>)
 </li>
   <li> Chenghao Yang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, and Xiaojing Zha "<A HREF="https://ieeexplore.ieee.org/abstract/document/9759467/">Logic Synthesis Optimization Sequence tuning using RL-based LSTM and Graph Isomorphism Network</a>",
-  <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022, Accepted for publication.</li>
+  <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, Aug. 2022, 69(8):3600-3604.</li>
   
   <li> Peng Liu, Jianguo Ni, and <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "<A HREF="https://link.springer.com/article/10.1007/s10773-022-05000-5">Wire-crossings Optimization
@@ -133,19 +133,19 @@ Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin C
        VLSI Journal</i>, May 2022, 84:84-91. </li>
   
   <li>Hongwei Zhou, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-    "Area-aware optimization of XOR-AND Graph based on Reed-Muller logic expansion</a>",
+    "<A HREF="https://ieeexplore.ieee.org/document/9856871/">Area-aware optimization of XOR-AND Graph based on Reed-Muller logic expansion</a>",
 <strong>CSTIC' 22</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
 2022, Hangzhou, China. </li>
 
 <li>Liangtao Shi, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-  "Using Mixed Logic Synthesis Tools in Open-Source FPGA Design Framework</a>",
+  "<A HREF="https://ieeexplore.ieee.org/document/9856889/">Using Mixed Logic Synthesis Tools in Open-Source FPGA Design Framework</a>",
 <strong>CSTIC' 22</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
 2022, Hangzhou, China. </li>
 
 <h3> 2021 </h3>
  <p class="big">
 <li>
-    储著飞，王伦耀，夏银水，"基于多逻辑域的逻辑综合研究进展"，<i>微纳电子与智能制造</i>，2021, 3(2):64-73. (<strong>Invited</strong>)
+    储著飞，王伦耀，夏银水，"<A HREF="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=WNDZ202102009&uniplatform=NZKPT&v=_El82ADdqgNbVp5AMgwZhyulUs-dshiUQttIuWQgT_wsDkSjI_rbpqIctDSEoTOG">基于多逻辑域的逻辑综合研究进展</a>"，<i>微纳电子与智能制造</i>，2021, 3(2):64-73. (<strong>Invited</strong>)
 </li>
   <li> 
     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei
@@ -163,18 +163,18 @@ Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin C
     Technology (<strong>JCST</strong>)</i>, Sep. 2021, 36(5):1118-1132.
 
 <li> Jianguo Ni, and <A HREF="https://zfchu.github.io">Zhufei
-        Chu</a>, "An Efficient Demultiplexer Design in Quantum-dot Cellular Automata", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
+        Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/9620355/">An Efficient Demultiplexer Design in Quantum-dot Cellular Automata</a>", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
 
 <li> Chuanhe Shang, and <A HREF="https://zfchu.github.io">Zhufei
-        Chu</a>, "Design of Majority Logic Based 4-bit Approximate Subtractors and Its
-    Application in Divider", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
+        Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/9620344/">Design of Majority Logic Based 4-bit Approximate Subtractors and Its
+    Application in Divider </a>", <strong> ASICON'21 </strong>, <i>IEEE 14th International Conference on ASIC</i>, Oct. 2021, Virtual online.
 
-<li>Xuan Wang, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, and Weikang Qian, "MinSC: An Exact Synthesis-Based Method for Minimal Area Stochastic Circuits under Relaxed Error Bound",
+<li>Xuan Wang, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, and Weikang Qian, "<A HREF="https://ieeexplore.ieee.org/document/9643580/">MinSC: An Exact Synthesis-Based Method for Minimal Area Stochastic Circuits under Relaxed Error Bound</a>",
     <strong>ICCAD' 21</strong>, <i>International Conference On Computer Aided Design</i>, Nov. 2021, Virtual online.
 
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, 
   Zeqiang Li, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
-                                                             HREF="https://ieeexplore.ieee.org/document/9311242">BCD Adder Designs based on Three-Input XOR and Majority Gates</a>", <i> IEEE Transactions on Circuits and Systems II:
+                                                          HREF="https://ieeexplore.ieee.org/document/9311242">BCD Adder Designs based on Three-Input XOR and Majority Gates</a>", <i> IEEE Transactions on Circuits and Systems II:
   Express Briefs(<strong>TCAS-II</strong>)</i>,
 June 2021, 68(6):1942-1946.
 </li>
@@ -372,6 +372,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal IET Computers & Digital Techniques. </li>
   <li>Reviewer for the journal Optik, International Journal for Light and Electron Optics. </li>
   <li>Reviewer for the journal Journal of Combinatorial Optimization. </li>
+  <li>Reviewer for the journal Journal of Supercomputing. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
