--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
+   <li>Oct. 2022, Invited to served as Digital Design & Verification Track
+     Chair of IEEE International Symposium of EDA (ISEDA 2023).</li>
    <li> May 2022, Invited to served as sub-forum co-chair and TPC member of <A
                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
                                                           Chip'22</a>.</li>
