--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <UL>
 	 <p class="big">
    <li>Oct. 2022, Invited to served as Digital Design & Verification Track
-     Chair of IEEE International Symposium of EDA (ISEDA 2023).</li>
+     Chair of <A HREF="https://www.eda2.com/conferenceHome/">IEEE International
+                 Symposium of EDA (ISEDA 2023)</a>.</li>
    <li> May 2022, Invited to served as sub-forum co-chair and TPC member of <A
                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
                                                           Chip'22</a>.</li>
@@ -112,11 +113,22 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   <h3> 2022 </h3>
    <p class="big">
    <li>
+     Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
+     Circuit Solver", <strong> DATE' 23</strong>, <i>2023 Design, Automation
+       and Test in Europe Conference</i>, Accepted for publicatioan, 2022. 
+   </li>
+   <li>
+     朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，计算机辅助设计与图形学学报，2022，录用待发表.
+     </li>
+   <li>
+     赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，多级混合极性Reed-Muller逻辑电路功耗优化，计算机辅助设计与图形学学报，2022，录用待发表.
+     </li>
+   <li>
 <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Chuanhe Shang, Tingting
 Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
   HREF="https://ieeexplore.ieee.org/document/9916208">Efficient Design of
-  Majority-Logic-Based Approximate Arithmetic Circuits</a>", IEEE Transactions
-on Very Large Scale Integration Systems, 2022, Accepted for publicatioan, DOI:10.1109/TVLSI.2022.3210252.
+  Majority-Logic-Based Approximate Arithmetic Circuits</a>", <i>IEEE Transactions
+  on Very Large Scale Integration Systems (<strong>TVLSI</strong>)</i>, 2022, Accepted for publicatioan, DOI:10.1109/TVLSI.2022.3210252.
      </li>
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, Accepted for publication. (<strong>Invited</strong>)
@@ -127,7 +139,8 @@ Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin C
 </li>
   <li> Chenghao Yang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, and Xiaojing Zha "<A HREF="https://ieeexplore.ieee.org/abstract/document/9759467/">Logic Synthesis Optimization Sequence tuning using RL-based LSTM and Graph Isomorphism Network</a>",
-  <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, Aug. 2022, 69(8):3600-3604.</li>
+    <i>IEEE Transactions on Circuits and Systems II: Express Briefs
+      (<strong>TCAS-II</strong>)</i>, Aug. 2022, 69(8):3600-3604.</li>
   
   <li> Peng Liu, Jianguo Ni, and <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, "<A HREF="https://link.springer.com/article/10.1007/s10773-022-05000-5">Wire-crossings Optimization
