--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
+   <li>Nov. 2022, Invited to served as Research TPC Subcommittee Member of <A
+       HREF="https://www.dac.com/">
+       DAC'23</a>.</li>
    <li>Oct. 2022, Invited to served as Digital Design & Verification Track
      Chair of <A HREF="https://www.eda2.com/conferenceHome/">IEEE International
                  Symposium of EDA (ISEDA 2023)</a>.</li>
@@ -115,7 +118,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <li>
      Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
      Circuit Solver", <strong> DATE' 23</strong>, <i>2023 Design, Automation
-       and Test in Europe Conference</i>, Accepted for publicatioan, 2022. 
+       and Test in Europe Conference</i>, Antwerp, Belgium, Accepted for publication, 2022. 
    </li>
    <li>
      朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，计算机辅助设计与图形学学报，2022，录用待发表.
