--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2022 </h3>
    <p class="big">
+   <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "A
+     Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver",<i>Journal of Computer Science and
+    Technology (<strong>JCST</strong>)</i>, Accepted for publication, 2022. </li>
    <li>
-     Hongyang Pan, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
+     Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
      Circuit Solver", <strong> DATE' 23</strong>, <i>2023 Design, Automation
        and Test in Europe Conference</i>, Antwerp, Belgium, Accepted for publication, 2022. 
    </li>
@@ -375,6 +378,9 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 <ul> 
   <p class="big">
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
+   <li>Finance Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2022.</li>
+   <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA (ISEDA 2023).</li>
+  <li>TPC member for the Design Automation Conference, 2023.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
   <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
