--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="images/chu_2022.jpg" width=120>
 </td>
 <td width=600>
-<h2>Zhufei Chu, Associate Professor, Ningbo Univ.</h2>
+<h2>Zhufei Chu, Professor, Ningbo Univ.</h2>
 <h4>
 [<a href="#tools">Tools</a>]
 [<a href="#news">Recent News</a>]
@@ -55,6 +55,9 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
+    <li> Promoted to be a Full Professor.</li>
+    <li> Dec. 2022, Invited to served as Finance Chair and TPC
+      member of <A HREF="https://www.iwls.org/iwsl2023/">IWLS'23</a>.</li>
    <li>Nov. 2022, Invited to served as Research TPC Subcommittee Member of <A
        HREF="https://www.dac.com/">
        DAC'23</a>.</li>
@@ -68,7 +71,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
     <li> Aug. 2021, Invited to served as Finance Chair and TPC
-      member of <A HREF="https://www.iwls.org/">IWLS'22</a>.</li>
+      member of <A HREF="https://www.iwls.org/iwsl2022/">IWLS'22</a>.</li>
     <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
   <li> Oct. 2020, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
@@ -101,7 +104,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 	 <p class="big">
     <strong>Zhufei Chu</strong>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
     He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
-    He is currently an associate professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
+    He is currently a full professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
 </UL>	
 <HR>
 	
@@ -113,10 +116,18 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+  <h3> 2023 </h3>
+   <p class="big">
+   <li> Ruibing Zhang, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Logic Circuit Simulation based on Semi-Tensor Product", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
+2023, Shanghai, China.</li>
+   <li> Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "CirSAT: An Efficient Circuit-based SAT Solver via Fanout-driven Decision Heuristic", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
+2023, Shanghai, China.</li>
+
   <h3> 2022 </h3>
    <p class="big">
-   <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "A
-     Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver",<i>Journal of Computer Science and
+   <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
+  HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
+     Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver</a>",<i>Journal of Computer Science and
     Technology (<strong>JCST</strong>)</i>, Accepted for publication, 2022. </li>
    <li>
      Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Exact Synthesis based on Semi-Tensor Product
@@ -137,7 +148,7 @@ Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
   on Very Large Scale Integration Systems (<strong>TVLSI</strong>)</i>, 2022, Accepted for publicatioan, DOI:10.1109/TVLSI.2022.3210252.
      </li>
 	   <li>
-Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, Accepted for publication. (<strong>Invited</strong>)
+Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, 2(4): 042501. (<strong>Invited</strong>)
 	   </li>
 <li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A HREF="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CAPJ&dbname=CAPJLAST&filename=DZYX20220902000&uniplatform=NZKPT&v=OBbwn4s_s_B6KENbBUVl4cVWgp9cD3P3jSYyHbdEAGtk1hcGDcP7Ol5V6pf8Iajz">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2022,
