--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
-    <li> Promoted to be a Full Professor.</li>
+    <li> Dec. 2022, Promoted to be a Full Professor.</li>
     <li> Dec. 2022, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/iwsl2023/">IWLS'23</a>.</li>
    <li>Nov. 2022, Invited to served as Research TPC Subcommittee Member of <A
@@ -125,6 +125,14 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 
   <h3> 2022 </h3>
    <p class="big">
+   <li>
+<A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Chuanhe Shang, Tingting
+Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
+  HREF="https://ieeexplore.ieee.org/document/9916208">Efficient Design of
+  Majority-Logic-Based Approximate Arithmetic Circuits</a>", <i>IEEE Transactions
+  on Very Large Scale Integration Systems (<strong>TVLSI</strong>)</i>, Dec.
+2022, 30(12):1827-1839.
+     </li>
    <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
   HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
      Semi-Tensor Product Based All Solutions Boolean Satisfiability Solver</a>",<i>Journal of Computer Science and
@@ -139,13 +147,6 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
      </li>
    <li>
      赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，多级混合极性Reed-Muller逻辑电路功耗优化，计算机辅助设计与图形学学报，2022，录用待发表.
-     </li>
-   <li>
-<A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Chuanhe Shang, Tingting
-Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
-  HREF="https://ieeexplore.ieee.org/document/9916208">Efficient Design of
-  Majority-Logic-Based Approximate Arithmetic Circuits</a>", <i>IEEE Transactions
-  on Very Large Scale Integration Systems (<strong>TVLSI</strong>)</i>, 2022, Accepted for publicatioan, DOI:10.1109/TVLSI.2022.3210252.
      </li>
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, 2(4): 042501. (<strong>Invited</strong>)
