--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
+<li>
+    <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
+       HREF="<https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
+    45(1):14-23. (<strong>Invited</strong>)
+</li>
    <li> Ruibing Zhang, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Logic Circuit Simulation based on Semi-Tensor Product", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
 2023, Shanghai, China.</li>
    <li> Kunmei Hu and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "CirSAT: An Efficient Circuit-based SAT Solver via Fanout-driven Decision Heuristic", <strong>CSTIC' 23</strong>, <i> China Semiconductor Technology International Conference</i>, June
@@ -151,10 +156,6 @@ Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, 2(4): 042501. (<strong>Invited</strong>)
 	   </li>
-<li>
-    <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A HREF="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CAPJ&dbname=CAPJLAST&filename=DZYX20220902000&uniplatform=NZKPT&v=OBbwn4s_s_B6KENbBUVl4cVWgp9cD3P3jSYyHbdEAGtk1hcGDcP7Ol5V6pf8Iajz">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2022,
-    录用待发表. (<strong>Invited</strong>)
-</li>
   <li> Chenghao Yang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei
       Chu</a>, and Xiaojing Zha "<A HREF="https://ieeexplore.ieee.org/abstract/document/9759467/">Logic Synthesis Optimization Sequence tuning using RL-based LSTM and Graph Isomorphism Network</a>",
     <i>IEEE Transactions on Circuits and Systems II: Express Briefs
