--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 	 <p class="big">
     <li> Dec. 2022, Promoted to be a Full Professor.</li>
     <li> Dec. 2022, Invited to served as Finance Chair and TPC
-      member of <A HREF="https://www.iwls.org/iwsl2023/">IWLS'23</a>.</li>
+      member of <A HREF="https://www.iwls.org/iwls2023/">IWLS'23</a>.</li>
    <li>Nov. 2022, Invited to served as Research TPC Subcommittee Member of <A
        HREF="https://www.dac.com/">
        DAC'23</a>.</li>
