--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
+   <li> Mar. 2023, Invited to served as TPC Chair of <A
+       HREF="http://iccs.org/index.html">ICCS'23</a>.</li>
     <li> Dec. 2022, Promoted to be a Full Professor.</li>
     <li> Dec. 2022, Invited to served as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/iwls2023/">IWLS'23</a>.</li>
@@ -62,8 +64,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
        HREF="https://www.dac.com/">
        DAC'23</a>.</li>
    <li>Oct. 2022, Invited to served as Digital Design & Verification Track
-     Chair of <A HREF="https://www.eda2.com/conferenceHome/">IEEE International
-                 Symposium of EDA (ISEDA 2023)</a>.</li>
+     Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
    <li> May 2022, Invited to served as sub-forum co-chair and TPC member of <A
                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
                                                           Chip'22</a>.</li>
@@ -393,6 +394,8 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
    <li>Finance Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2022.</li>
    <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA (ISEDA 2023).</li>
+   <li>TPC Chair for the International Conference on Circuits and Systems
+     (ICCS), 2023.</li>
   <li>TPC member for the Design Automation Conference, 2023.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
