--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	 <p class="big">
+   <li> Mar. 2023, Invited to served as Editorial Board Member of <A
+       HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
    <li> Mar. 2023, Invited to served as TPC Chair of <A
        HREF="http://iccs.org/index.html">ICCS'23</a>.</li>
     <li> Dec. 2022, Promoted to be a Full Professor.</li>
@@ -396,6 +398,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
    <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA (ISEDA 2023).</li>
    <li>TPC Chair for the International Conference on Circuits and Systems
      (ICCS), 2023.</li>
+   <li>Editorial Board Member for the Journal of Electronics and Enformation Technology (JEIT), 2023-2026 </li>
   <li>TPC member for the Design Automation Conference, 2023.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
   <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
