--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h3> 2023 </h3>
    <p class="big">
-<li>
+   <li> Chunliu Liao, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Improved Depth-Aware Circuit Partitioning for Mixed Logic Synthesis
+", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May
+2023, Nanjing, China.</li>
+	<li> Chengyu Ma, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "An Integrated Logic Function Decomposition Flow for XOR-Majority Graphs", <strong>ISEDA' 23</strong>, <i> IEEE International Symposium of EDA</i>, May 2023, Nanjing, China.</li>
+	<li>
     <A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，"<A
        HREF="<https://jeit.ac.cn/cn/article/doi/10.11999/JEIT220391">基于布尔可满足性的精确逻辑综合综述</a>"，<i>电子与信息学报</i>，2023,
     45(1):14-23. (<strong>Invited</strong>)
