--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <td width=143>
 <img src="images/chu_2022.jpg" width=120>
 </td>
-<td width=600>
+<td width=800>
 <h2>Zhufei Chu, Professor, Ningbo Univ.</h2>
 <h4>
 [<a href="#tools">Tools</a>]
+[<a href="#tutorials">Tutorials</a>]
 [<a href="#news">Recent News</a>]
 [<a href="#about">About me</a>]
 [<a href="#publications">Publications</a>]
@@ -46,10 +47,22 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <HR>
 <h2> <a name="tools">Tools</a> 
-</h2><a
-  href="https://github.com/nbulsi/also"><font
-  color="#FF0000">  ALSO </font> : Advanced Logic Synthesis and
-    Optimization tool<a>
+</h2>
+<strong>ALSO</strong>: <strong>A</strong>dcanced  <strong>L</strong>ogic
+<strong>S</strong>ynthesis and <strong>O</strong>ptimization tool. <A HREF="https://github.com/nbulsi/also">[GitHub]</a>
+<A HREF="https://gitee.com/zfchu/also">[Gitee]</a>
+
+<h2> <a name="tutorials">Tutorials</a> 
+</h2>
+<li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">“Logic Synthesis Tools and Techniques: Insights from Academia and
+    Industry”</a> Tutorial organized by Ningbo University and Giga
+Design Automation is accepted for presentation at <A
+  HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a> on May 8th, 2023.</li>
+
+<li>An online turotial <A
+    HREF="https://www.bilibili.com/video/BV1Ha411J7ow/?p=3">"Logic Synthesis,
+    Optimization, and Verification"</a> invited by Xidian University was
+  presented on Apr. 25th, 2022.</li>
 
 <h2> <a name="news">Recent News</a> </h2>
 
@@ -415,6 +428,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part I. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
+  <li>Reviewer for the journal ACM Transactions on Design Automation of Electronic Systems. </li>
   <li>Reviewer for the journal IET Circuits, Devices & Systems. </li>
   <li>Reviewer for the journal Journal of Computer Science and Technology. </li>
   <li>Reviewer for the journal Integration, the VLSI Journal. </li>
